--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -15,4 +15,66 @@ button.close-button {
   position: absolute;
   top: 10px;
   right: 10px;
+  background-color: white;
+}
+
+button.remove-button {
+  margin-left: 5px;
+  background-color: white;
+}
+
+div.overlay {
+  position: absolute;
+  width: 80%;
+  height: 80%;
+  top: 10%;
+  left: 10%;
+  padding: 1%;
+  border: thin black solid;
+  background-color: white;
+}
+
+div.dim {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 3px;
+  left: 0;
+  background: rgba(255, 255, 255, 0.5);
+}
+
+img.logo {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+img.logo:hover {
+  filter: drop-shadow(8px 8px 10px gray);
+}
+
+p {
+  margin: 0;
+  padding: 5px 0;
+}
+
+h3 {
+  margin: 0;
+  padding: 8px 0;
+}
+
+ul {
+  margin: 0;
+}
+
+li {
+  padding: 5px 0;
+}
+
+div.time-selector {
+  display: inline;
+}
+
+select[multiple] {
+  width: 200px;
 }
